--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,3 +1,6 @@
+<h5>1.12 Beta 1  [NOT RELEASED]</h5>
+<hr>
+
 1.11 Final        2016-08-01
 =================================
 - code cosmetics (mamba)
