--- a/docs/install.txt
+++ b/docs/install.txt
@@ -1,6 +1,6 @@
 INSTALL/UNISTALL
 =================
 
-No special measures necessary, follow the standard installation process – extract the module folder into the ../modules directory. Install the module through Admin -> System Module -> Modules. 
+No special measures necessary, follow the standard installation process â€“ extract the module folder into the ../modules directory. Install the module through Admin -> System Module -> Modules.
 
 Detailed instructions on installing modules are available in the XOOPS Operations Manual (http://goo.gl/adT2i)
