--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -23,7 +23,7 @@
 + changed main language file variable names to Xoops Module Standards naming nomenclature
 + changed $HTTP_GET_VARS to $_GET for PHP 5
 + changed XoopsheadlineRenderer->updateCache() to try cURL if fopen fails
-+ changed xoopsheadlineHeadlineHandler to use XoopsPersistableObjectHandler
++ changed HeadlineHandler to use XoopsPersistableObjectHandler
 + changed headlinerender->renderfeed() to scale image if it's large than
 + changed defines to include _HEADLINES_ image limit so that it scales proportionally
 + added module configuration option to sort feed display
