--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,5 +1,12 @@
-<h5>1.12 Beta 1  [NOT RELEASED]</h5>  Dev: Xoops 2.5.9, PHP 7.2.3
+<h5>1.12 Beta 1  [2020-11-11]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.12, PHP 8.0 RC 3
 <hr>
+- namespaces (mamba)
+- class autoloading (mamba)
+- added Migrate (mamba)
+- renamed 'PHP_SELF' to 'SCRIPT_NAME' (mamba)
+- Yoda & Cosmetics (mamba)
+- PHP7, PHP8 adjustments (mamba)
+- blocksadmin (mamba)
 
 1.11 Final        2016-08-01
 =================================
