--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,3 +1,10 @@
+<h5>1.12 Beta 2  [2021-11-26]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.26, PHP 8.0.13, PHP 8.1.0
+<hr>
+- symantic versioning (mamba)
+- cosmetics (mamba)
+- Testdata Buttons (mamba)
+
+
 <h5>1.12 Beta 1  [2020-11-11]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.12, PHP 8.0 RC 3
 <hr>
 - namespaces (mamba)
@@ -9,6 +16,7 @@
 - blocksadmin (mamba)
 - changed XOOPS sample from /news to /publisher (mamba)
 - Fix unsing headline_block.tpl from a theme (walkero-gr)
+
 
 1.11 Final        2016-08-01
 =================================
