--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -6,6 +6,7 @@
 - PHP 8.1 adjustments (mamba)
 - moved getRenderer() to Utility class (mamba)
 - PhpStan changes (mamba)
+- fixes for block updates (mamba)
 
 <h5>1.12.0 Beta 2  [2021-11-26]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.26, PHP 8.0.13, PHP 8.1.0
 <hr>
