--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -7,6 +7,8 @@
 - moved getRenderer() to Utility class (mamba)
 - PhpStan changes (mamba)
 - fixes for block updates (mamba)
+- use of local Helper in /testdata/index.php (mamba)
+
 
 <h5>1.12.0 Beta 2  [2021-11-26]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.26, PHP 8.0.13, PHP 8.1.0
 <hr>
