--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,3 +1,8 @@
+<h5>1.12.0 Beta 2  [2022-02-20]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.27, PHP 8.0.16
+<hr>
+- index.html in /preloads (mamba)
+
+
 <h5>1.12 Beta 1  [2020-11-11]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.12, PHP 8.0 RC 3
 <hr>
 - namespaces (mamba)
